<resources>
    <string name="app_name">mobile_hw_1</string>
    <string name="entry_via_google">Войти через Google</string>
    <string name="entry_greetings">Добро пожаловать</string>
    <string name="chip_info_logs_count"><b>4</b> записи</string>
    <string name="chip_info_daily_logs">в день: <b>2 записи</b></string>
    <string name="chip_info_logs_combo">серия: <b>0</b> дней</string>
    <string name="journal_how_are_you">Как вы сейчас чувствуете?</string>
    <string name="add_note">Добавить записть</string>

    <string name="log_card_date">вчера 23:45</string>
    <string name="log_card_date_today">сегодня 11:23</string>
    <string name="log_card_i_feel">Я чувствую</string>

    <string name="add_note_title">Запись</string>
    <string name="add_note_question_1">Чем вы занимались?</string>
    <string name="add_note_question_2">С кем вы были?</string>
    <string name="add_note_question_3">Где вы были?</string>

    <string name="add_note_chip_group_1_1">Приём пищи</string>
    <string name="add_note_chip_group_1_2">Встреча с друзьями</string>
    <string name="add_note_chip_group_1_3">Тренировка</string>
    <string name="add_note_chip_group_1_4">Хобби</string>
    <string name="add_note_chip_group_1_5">Отдых</string>
    <string name="add_note_chip_group_1_6">Поездка</string>

    <string name="add_note_chip_group_2_1">Один</string>
    <string name="add_note_chip_group_2_2">Друзья</string>
    <string name="add_note_chip_group_2_3">Семья</string>
    <string name="add_note_chip_group_2_4">Коллеги</string>
    <string name="add_note_chip_group_2_5">Партнёр</string>
    <string name="add_note_chip_group_2_6">Питомец</string>

    <string name="add_note_chip_group_3_1">Дом</string>
    <string name="add_note_chip_group_3_2">Работа</string>
    <string name="add_note_chip_group_3_3">Школа</string>
    <string name="add_note_chip_group_3_4">Транспорт</string>
    <string name="add_note_chip_group_3_5">Улица</string>

    <string name="add_note_button_save">Сохранить</string>

    <string name="settings_title">Настройки</string>
    <string name="settings_send_notifs">Присылать напоминания</string>
    <string name="settings_add_notif">Добавить напоминание</string>
    <string name="settings_log_via_fingerprint">Вход по отпечатку пальца</string>
    <string name="settings_log_IVAN">Иван Баран</string>
    <string name="settings_bottom_sheet_notif">Напоминание</string>

    <string name="stats_page1_title">Эмоции по категориям</string>
    <string name="stats_page2_title">Эмоции по дням недели</string>
    <string name="stats_page3_title">Самые частые эмоции</string>
    <string name="stats_page4_title">Ваше настроение в течении дня</string>
    <string name="stats_page4_col1">Раннеe утро</string>
    <string name="stats_page4_col2">Утро</string>
    <string name="stats_page4_col3">День</string>
    <string name="stats_page4_col4">Вечер</string>
    <string name="stats_page4_col5">Поздний вечер</string>



    <string name="nav_menu_journal">Журнал</string>
    <string name="nav_menu_stats">Статистика</string>
    <string name="nav_menu_settings">Настройки</string>

    <string name="circle_grid_placeholder">Выберите эмоцию, лучше всего описывающую, что вы сейчас чувствуете</string>

    <string name="feel_type_rage">Ярость</string>
    <string name="feel_type_envy">Зависть</string>
    <string name="feel_type_burnout">Выгорание</string>
    <string name="feel_type_depression">Депрессия</string>
    <string name="feel_type_tension">Напряжение</string>
    <string name="feel_type_anxiety">Беспокойство</string>
    <string name="feel_type_fatigue">Усталось</string>
    <string name="feel_type_apathy">Апатия</string>
    <string name="feel_type_excitement">Возбуждение</string>
    <string name="feel_type_confidence">Уверенность</string>
    <string name="feel_type_calmness">Спокойствие</string>
    <string name="feel_type_gratitude">Благодарность</string>
    <string name="feel_type_delight">Восторг</string>
    <string name="feel_type_happiness">Счастье</string>
    <string name="feel_type_satisfaction">Удовлетворённость</string>
    <string name="feel_type_security">Защищённость</string>
</resources>