<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/black">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="48dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">
                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/chip_info"
                    android:rotation="180"
                    android:src="@drawable/arrow_right"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/gwen_trial_extrabold"
                    android:text="@string/add_note_title"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/backBtn"
                    app:layout_constraintStart_toEndOf="@+id/backBtn"
                    app:layout_constraintTop_toTopOf="@+id/backBtn" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.example.mobile_hw_1.customview.EmoteCard
                android:id="@+id/emoteCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/quest1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:fontFamily="@font/velasans_regular"
                android:text="@string/add_note_question_1"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                app:chipSpacingVertical="4dp"
                app:chipSpacingHorizontal="2dp"
                app:layout_constraintStart_toStartOf="@+id/quest1"
                app:layout_constraintTop_toBottomOf="@+id/quest1">

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_1_1"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_1_2"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_1_3"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_1_4"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_1_5"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_1_6"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    android:id="@+id/add_chip_1"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:fontFamily="@font/velasans_regular"
                    android:textSize="16sp"
                    app:chipEndPadding="4dp"
                    app:chipStartPadding="2dp"
                    app:chipMinHeight="30dp"
                    android:checkable="false"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/velasans_regular"
                android:text="@string/add_note_question_2"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup1" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                app:chipSpacingVertical="4dp"
                app:chipSpacingHorizontal="2dp"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_2_1"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_2_2"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_2_3"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_2_4"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_2_5"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_2_6"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    android:id="@+id/add_chip_2"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:fontFamily="@font/velasans_regular"
                    android:textSize="16sp"
                    app:chipEndPadding="4dp"
                    app:chipStartPadding="2dp"
                    app:chipMinHeight="30dp"
                    android:checkable="false"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/velasans_regular"
                android:text="@string/add_note_question_3"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup2" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                app:chipSpacingVertical="4dp"
                app:chipSpacingHorizontal="2dp"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_3_1"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_3_2"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_3_3"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_3_4"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_chip_group_3_5"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    app:ensureMinTouchTargetSize="false"
                    android:id="@+id/add_chip_3"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:fontFamily="@font/velasans_regular"
                    android:textSize="16sp"
                    app:chipEndPadding="4dp"
                    app:chipStartPadding="2dp"
                    app:chipMinHeight="30dp"
                    android:checkable="false"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

            </com.google.android.material.chip.ChipGroup>



        </LinearLayout>

    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:theme="@style/Theme.Mobile_hw_1.defaults"
        android:id="@+id/save"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_bg_solid_white_rounded"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/add_note_button_save"
        android:fontFamily="@font/velasans_medium"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

