<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-99dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipInfo_chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:chipSpacingHorizontal="4dp"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="false"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="4dp"
                    android:text="@string/chip_info_logs_count"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/testSwitchToCircle"
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="false"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="4dp"
                    android:text="@string/chip_info_daily_logs"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />

                <com.google.android.material.chip.Chip
                    style="@style/Theme.Mobile_hw_1.chip_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="false"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="4dp"
                    android:text="@string/chip_info_logs_combo"
                    android:textAppearance="@style/Theme.Mobile_hw_1.chip_info.textAppearance" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/gwen_trial_regular"
                android:text="@string/journal_how_are_you"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="24dp">

                <com.example.mobile_hw_1.customview.custom_circle_journal.CustomCircleJournal
                    android:id="@+id/circleJournal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/addNoteBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/transparent"
                        android:src="@drawable/add_btn"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/velasans_medium"
                        android:text="@string/add_note"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/addNoteBtn" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </FrameLayout>

            <!--<androidx.recyclerview.widget.RecyclerView
                android:id="@+id/emoteRecycler"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"/>-->

            <LinearLayout
                android:id="@+id/cardContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
